# bau-task

./: .gitignore  README.md  benchmarking.py  counting_ds.jsonl  data.py  eval_script.sh  generic_activation_patch.py  patching.py  pyproject.toml
dataset/: dataset_easy.jsonl  dataset_hard.jsonl  dataset_instruct_easy.jsonl  dataset_instruct_hard.jsonl  dataset_instruct_medium.jsonl  dataset_instruct_sample.jsonl  dataset_medium.jsonl  dataset_sample.jsonl
eval/easy/: results.json
eval/easy/log/google/: gemma-2-27b-it.txt  gemma-2-2b-it.txt  gemma-2-9b-it.txt
eval/hard/: results.json
eval/hard/log/google/: gemma-2-2b-it.txt
eval/medium/: results.json
eval/medium/log/google/: gemma-2-2b-it.txt  gemma-2-9b-it.txt
eval/sample/: results.json
eval/sample/log/google/: gemma-2-27b-it.txt  gemma-2-2b-it.txt  gemma-2-9b-it.txt  gemma-3-4b-it.txt
