[project]
name = "bau-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hf-transfer>=0.1.9",
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformer-lens>=2.15.4",
]
